force-app/main/default/objects/Inactivation_Policy__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <label>Is Active</label>
    <description>Controls whether this inactivation policy is active and will be executed by the scheduled batch</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>