force-app/main/default/objects/Inactivation_Policy__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <description>API name of the Salesforce object this policy applies to (e.g., Account, Contact)</description>
    <type>Text</type>
    <length>80</length>
</CustomField>