force-app/main/default/objects/Inactivation_Policy__mdt/fields/Suppression_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Enabled__c</fullName>
    <label>Suppression Enabled</label>
    <description>When checked, inactive records will be suppressed from lookups and search results</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>